# first-project-with-ci

./: .gitignore  .pre-commit-config.yaml  db.sqlite3  pyproject.toml
.github/workflows/: code-quality.yaml  pre-commit2.yaml  tests.yaml
backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/generics/: apps.py  clients.py  models.py
backend/todo/: factories.py  models.py  serializers.py  tests.py  views.py
backend/todo/api/: base.py
backend/todo/migrations/: 0001_initial.py  0002_auto_20201024_1338.py
backend/todo/tests/views/: test_tasks.py
backend/users/: admin.py  choices.py  factories.py  managers.py  models.py  serializers.py  tests.py  views.py
backend/users/api/: base.py
backend/users/migrations/: 0001_initial.py  0002_user_user_type.py  0003_auto_20201025_1509.py
backend/users/tests/views/: test_university.py
